src/main/resources/devops/k8s_aws/httpd/ingress_httpd.yaml
##################################################################################################
# This is Ingress Controller Configuration
# from version 2.24 of k8s [You can check the current version using 'kubectl version']
##################################################################################################  

apiVersion: networking.k8s.io/v1beta1

kind: Ingress

metadata:
  name: webapp-routing

spec:
  rules:
    - host: httpd.fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: yoogesh-httpd-server
              servicePort: 80
